[package]
name = "firecracker-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["_rt_std"]
_rt_std = []
_rt_tokio = ["_rt_async"]
_rt_async_std = ["_rt_async"]
_rt_async = []

[dependencies]
async-std = { version = "1.13", features = ["attributes"] }
async-trait = "0.1"
bytes = "1.10"
httparse = "1.10"
log = "0.4"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = [
    "net",
    "time",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }
