[package]
name = "firecracker-rs-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuehaonan27/firecracker-rs-sdk"
keywords = ["firecracker", "AWS", "cloud", "rustcracker"]
categories = ["virtualization", "cloud", "asynchronous"]
authors = ["Xue Haonan <xuehaonan27@gmail.com>"]
readme = "README.md"
description = "🧨🦀🚀 The Firecracker Rust SDK. A pure Rust crate for interacting with Firecracker."

[features]
default = []

# For conditional compilation
_rt-std = []
_rt-tokio = ["_rt-async", "tokio"]
_rt-async-std = ["_rt-async", "async-std"]

# For sharing code between `_rt-tokio` and `_rt-async-std`
_rt-async = ["async-trait"]

[dependencies]
async-std = { version = "1.13", features = ["attributes"], optional = true }
async-trait = { version = "0.1", optional = true }
bytes = "1.10"
httparse = "1.10"
log = "0.4"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = [
    "net",
    "time",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
], optional = true }

[dev-dependencies]
dotenvy = "0.15"
